[gd_scene load_steps=6 format=3 uid="uid://cd47glo5xjmce"]

[ext_resource type="Script" uid="uid://d2arr0e1fbscx" path="res://managers/transition/TransitionManager.gd" id="1_cejok"]

[sub_resource type="Animation" id="2"]
resource_name = "fadeFromBlack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("transitionEffects/fadeBlack:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("transitionEffects/fadeBlack/fadeBlackColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="5"]
resource_name = "fadeLoadingScreen"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("loadingScreen/loadingBg:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("loadingScreen/CenterContainer:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("loadingScreen/TextureRect:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="1"]
resource_name = "fadeToBlack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("transitionEffects/fadeBlack:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("transitionEffects/fadeBlack/fadeBlackColorRect:color")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 0.203063),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cejok"]
_data = {
&"fadeFromBlack": SubResource("2"),
&"fadeLoadingScreen": SubResource("5"),
&"fadeToBlack": SubResource("1")
}

[node name="transitionManager" type="Node"]
script = ExtResource("1_cejok")

[node name="loadingScreen" type="CanvasLayer" parent="."]
layer = 99

[node name="loadingBg" type="ColorRect" parent="loadingScreen"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="loadingScreen"]
visible = false
modulate = Color(1, 1, 1, 0)

[node name="CenterContainer" type="CenterContainer" parent="loadingScreen"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.5
offset_top = -31.0
offset_right = 37.5
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="loadingScreen/CenterContainer"]
layout_mode = 2

[node name="loadingLabel" type="Label" parent="loadingScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Loading..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="loadingScreen/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="loadingScreen/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2

[node name="spacer" type="Control" parent="loadingScreen/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="transitionEffects" type="CanvasLayer" parent="."]
layer = 100
visible = false

[node name="fadeBlack" type="Control" parent="transitionEffects"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="fadeBlackColorRect" type="ColorRect" parent="transitionEffects/fadeBlack"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_cejok")
}
